@@ -10,6 +10,9 @@ Changes with APR-util 1.4.0
      args. Provide detection code and alternative implementation.
      [Ruediger Pluem]
 
+  *) Add Berkeley DB 4.7 support.
+     [Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>]
+
 Changes with APR-util 1.3.0
 
   *) apr_reslist: destroy all resources in apr_cleanup.
